--- a/OmppuJaRane/src/main/resources/application.properties
+++ b/OmppuJaRane/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.rest.base-path=/api
+
+# next 4 rows to set up heroku deployment w/ mariadb
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
