--- a/OmppuJaRane/pom.xml
+++ b/OmppuJaRane/pom.xml
@@ -66,11 +66,11 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 		</dependency>
-		<dependency> <!-- heroku mariadb deployment setup -->
-			 <groupId>org.mariadb.jdbc</groupId>
+		<!-- <dependency> heroku mariadb deployment setup -->
+		<!--	 <groupId>org.mariadb.jdbc</groupId>
 			 <artifactId>mariadb-java-client</artifactId>
 			 <version>2.7.6</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
