--- a/OmppuJaRane/src/main/resources/application.properties
+++ b/OmppuJaRane/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.rest.base-path=/api
 
 # next 4 rows to set up heroku deployment w/ mariadb
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
